# refine

./: .gitignore  README.md
docs/dev/: issue-workflow.md
refine/: .gitignore  angular.json  package.json  tsconfig.json
refine/src-tauri/: Cargo.toml  tauri.conf.json
refine/src-tauri/capabilities/: default.json
refine/src-tauri/src/: error.rs  lib.rs  main.rs
refine/src-tauri/src/commands/: file.rs  markdown.rs  mod.rs  typst.rs
refine/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
refine/src/app/core/models/: file-data.model.ts  index.ts
refine/src/app/core/services/: index.ts  toast.service.ts  typst.service.ts
refine/src/app/core/services/file/: file.service.ts  index.ts  tauri-file-service.ts
refine/src/app/core/services/markdown/: index.ts  markdown.service.ts  tauri-markdown.service.ts
refine/src/app/features/preview/: preview.component.ts
refine/src/app/infrastructure/tauri/: tauri-typst.service.ts
refine/src/app/shared/components/toast/: toast-container.component.ts  toast.component.ts
scripts/: create-issue.ps1  create-issue.sh
scripts/issue-templates/: bug.md  feature.md
